--- a/index.html
+++ b/index.html
@@ -38,12 +38,12 @@
   <div class="iframe-container">
     <div class="loader" id="loader">Loading app...</div>
     <iframe 
-      src="https://script.google.com/a/~/macros/s/AKfycbxPjrZp_uvHahQ8QPRpgH9npMxHe-6zkt3IpUvt9ASpKWgmXWJ4oqcb4K6Np5qyqi0XFA/exec" 
+      src="https://script.google.com/macros/s/AKfycbxPjrZp_uvHahQ8QPRpgH9npMxHe-6zkt3IpUvt9ASpKWgmXWJ4oqcb4K6Np5qyqi0XFA/exec" 
       title="Rainforest"
-      onload="document.getElementById('loader').style.display='none';"
-      allowfullscreen>
+      allow="camera; microphone"
+      allowfullscreen
+      onload="document.getElementById('loader').style.display='none';">
     </iframe>
   </div>
 </body>
 </html>
-
